Fixed UI of Intervals Item overflow

--- a/style.css
+++ b/style.css
@@ -269,6 +269,7 @@ button {
   overflow: hidden;
   height: 32px;
   border: solid 1px #4c4c4c;
+  flex-shrink: 0;
 }
 
 .tab {
@@ -388,7 +389,8 @@ button {
   gap: 24px;
   padding: 0 8px;
   width: 100%;
-  height: 100%;
+  flex: 1;
+  overflow: hidden;
 }
 
 .settings-container{
@@ -564,7 +566,7 @@ label.auto-calc {
   align-items: center;
   gap: 16px;
   width: fit-content;
-  height: fit-content;
+  flex: 1;
 }
 
 /* ウィンドウ設定 */
